reduced talk title fontsize to prevent overlap

--- a/src/components/talkCard/styles.module.scss
+++ b/src/components/talkCard/styles.module.scss
@@ -77,7 +77,7 @@
 
       .title {
         font-family: "Source Code Pro", monospace;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
         color: $primary;
         line-height: 25px;
